Fixed JUnit Tests and Surefire configs
- Some --add-opens were added to ensure the tests finish successfully.